Udpate package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "fontSize",
+  "name": "fontSize.scss",
   "homepage": "https://github.com/moxie-leean/fontSize",
   "authors": [
     "Crisoforo Gaspar Hernandez <hello@crisoforo.com>"
