Update package name

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fontSize.scss",
-  "homepage": "https://github.com/moxie-leean/fontSize",
+  "homepage": "https://github.com/moxie-lean/fontSize",
   "authors": [
     "Crisoforo Gaspar Hernandez <hello@crisoforo.com>"
   ],
